# ai-financial-analyst

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
dashboard/: PANW_3Statement_Model.xlsx  TABLEAU_REPUBLISH_CHECKLIST.md  Tableau_Setup.md  _Tableau_Setup_template.md
dashboard/notebooklm_bundle/: 01_company_overview.md  02_latest_10K.txt  03_latest_10Q.txt  04_historical_financials.csv  05_forecast_summary.md  06_excel_model_summary.md  07_exec_commentary.md  08_test_report.html  09_eval_report.md  README_FOR_NOTEBOOKLM.md
dashboard/tableau_data/: dim_date.csv  dim_filing.csv  dim_metric.csv  fact_consensus.csv  fact_financials.csv  fact_forecasts.csv
dashboard/tableau_workbook/: PANW_Dashboard.twb  (+2 more)
docs/: ARCHITECTURE.md  MODELING_DECISIONS.md  VALIDATE_COMMENTARY.md
notebooks/: 02_baseline_forecast.ipynb  03_macro_regularized_forecast.ipynb
src/: build_excel_model.py  build_forecasts.py  build_notebooklm_bundle.py  build_variance_facts.py  build_warehouse.py  company_resolver.py  export_for_tableau.py  generate_commentary.py  ingest_edgar.py  select_models.py
tests/: conftest.py  test_commentary_guard.py  test_commentary_payload.py  test_commentary_refusal.py  test_commentary_retry.py  test_company_resolver.py  test_excel_balance_check.py  test_excel_load_history.py  test_forecast_vintage.py  test_ingest_edgar.py  test_macro_features.py  test_notebooklm_bundle.py  test_prompts.py  test_select_models.py  test_tableau_export.py  test_tableau_setup_template.py  test_variance_facts.py  test_warehouse.py
(+12 files in other folders)
