[project]
name = "ai-financial-analyst"
version = "0.1.0"
requires-python = ">=3.11"
description = "End-to-end AI-augmented financial forecasting on free SEC EDGAR + FRED data"

# ── Ruff (lint + format) ─────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W: pycodestyle  F: pyflakes  I: isort  N: naming
# UP: pyupgrade     B: bugbear   SIM: simplify  C4: comprehensions
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "C4"]

[tool.ruff.lint.per-file-ignores]
# Tests: allow assert, magic numbers, nested with, print
"tests/**" = ["S101", "PLR2004", "SIM117", "T20"]
# build_warehouse.py: SQL string literals exceed line length — not reformattable
"src/build_warehouse.py" = ["E501"]

# ── Mypy (strict type checking) ──────────────────────────────────────────────
[tool.mypy]
strict = true
python_version = "3.11"

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=60"

# ── Coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
# These modules contain openpyxl / file I/O heavy logic or live API calls;
# tested via integration rather than unit tests.
omit = [
    "src/build_excel_model.py",
    "src/build_notebooklm_bundle.py",
    "src/select_models.py",
]
